@@ -1,3 +1,8 @@
+2020-03-10  Frederik Seiffert <frederik@algoriddim.com>
+
+	* Source/GSHashTable.c: Fix second hash function for double hashing
+    collision case to avoid possible infinite loop.
+
 2019-11-15  Stefan Bidigaray <stefanbidi@gmail.com>
 	* Source/CFNumber.c: Implement toll-free bridging in
 	CFNumberGetValue().
